package Isis;

message PBControlNetLogData {

  message Point {
    message Measure {
      message DataEntry {
        required int32 dataType = 2;
        required double dataValue = 3;
      }

      repeated DataEntry loggedMeasureData = 2;
    }

    repeated Measure measures = 2;
  }

  repeated Point points = 1;
}
